<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <Button
            android:id="@+id/selling_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sell_home_label"
            app:layout_constraintBottom_toTopOf="@+id/list_button"
            app:layout_constraintEnd_toEndOf="@+id/list_button"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/list_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/winning_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/winning_home_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_button" />

        <Button
            android:id="@+id/list_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/selling_list_home_label"
            app:layout_constraintBottom_toTopOf="@+id/winning_button"
            app:layout_constraintEnd_toEndOf="@+id/winning_button"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="@+id/winning_button"
            app:layout_constraintTop_toBottomOf="@+id/selling_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>